Change background color

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: bisque;
+  background-color: rgb(236, 230, 147);
   text-align: center;
   line-height: 1.5;
 }
